--- a/templates/search.html
+++ b/templates/search.html
@@ -42,7 +42,7 @@
             <span class="item__username">{{post.poster_name}}</span>
           </a>
         </div>
-        <a href="/posts/{{post.poster_name}}" class="item__post-link">
+        <a href="/posts/{{post.pk}}" class="item__post-link">
           <img src="{{post.pic}}" alt="" width="348" class="item__post-img">
         </a>
         <p class="item__descr"><a href="/tag.html" class="item__tag">#food</a> {{post.content[:50]}}</p> <!--Поработать с тегами-->
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/posts/{{post.poster_name}}" class="item__btn-more">Подробнее</a>
+          <a href="/posts/{{post.pk}}" class="item__btn-more">Подробнее</a>
           <button type="button" class="item__bookmark-btn">
             <img src="/static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
